# mlops-churn-prediction

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.transformer  README.md  docker-compose.yml  dvc.yaml  params.yaml  params_tuned.yaml  pyproject.toml
.dvc/: config
.github/workflows/: cd.yml  ci.yml  main.yml  ml-retraining.yml
k8s/: inferenceservice.yaml  serviceaccount.yaml
notebooks/: 01-data-preparation.ipynb  main.ipynb
src/: config.py  data_cleaning.py  data_collection.py  data_preparation.py  data_split.py  feature_engineering.py  logs.py  model_training.py  transformer.py
src/api/: main.py
src/kubeflow/: pipeline.py
src/pipeline/: data_collection.py  data_split.py  feature_engineering.py  model_evaluation.py  model_training.py
tests/e2e/: test_api.py
tests/unit/: test_data_cleaning.py  test_data_split.py  test_feature_engineering.py
